# cinemarustback

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: error.rs  main.rs  tests.rs
src/models/: mod.rs  movie.rs  review.rs  series.rs
src/routes/: mod.rs  movie.rs  review.rs  series.rs
src/services/: db.rs  mod.rs  movie_db.rs  movie_repo.rs  review_db.rs  review_repo.rs  series_db.rs  series_repo.rs
