[package]
name = "cinemarustback"
description = "REST API related to movies, series and its reviews."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = [
    "MCPikon <javierpiconpastor@gmail.com>"
]

[dependencies]
actix-web = "4.6.0"
chrono = "0.4.38"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
log = "0.4.21"
mongodb = "2.8.2"
regex = "1.10.4"
serde = "1.0.203"
serde_json = "1.0.117"
